fix the text wrapping issue on course cards

--- a/static/sass/_trinity-education.scss
+++ b/static/sass/_trinity-education.scss
@@ -242,6 +242,20 @@ section.container {
     line-height: 24px;
 }
 
+.courses-container .courses .course .course-info span.course-organization {
+  font-size: 10px;
+  font-weight: bolder;
+  opacity: 0.7;
+}
+
+.courses-container .courses .course .course-info {
+  padding-bottom: 10px;
+}
+
+.courses-container .courses .course .course-info .course-title {
+  margin-bottom: 18px;
+}
+
 // Import Custom SASS
 @import "bourbon/bourbon";
 @import "custom/footer";
